@@ -10,8 +10,13 @@
  * You will find a copy of this license within the cocos2d for iPhone
  * distribution inside the "LICENSE" file.
  *
- *********************************************************
- *
+ */
+
+#import <Foundation/Foundation.h>
+#import "CocosNode.h"
+#import "Ribbon.h"
+
+/**
  * Motion Streak manages a Ribbon based on it's motion in absolute space.
  * You construct it with a fadeTime, minimum segment size, texture path, texture
  * length and color. The fadeTime controls how long it takes each vertex in
@@ -20,29 +25,29 @@
  * length is the how many pixels the texture is stretched across. The texture
  * is vertically aligned along the streak segemnts. 
  */
-
-#import <Foundation/Foundation.h>
-#import "CocosNode.h"
-#import "Ribbon.h"
-
-/** Motion Streak - creates a ribbon based on velocity of motion with fading tail */
 @interface MotionStreak : CocosNode 
 {
-	Ribbon* mRibbon;
+	Ribbon*	ribbon_;
 	float mFadeTime;
 	float mSegThreshold;
-	uint mColor;
-	NSString* mPath;
 	float mWidth;
 	float mTextureLength;
 	CGPoint mLastLocation;
+
+	ccColor4B	color_;
 }
 
+/** color used by the MotionStreak */
+@property (readwrite) ccColor4B color;
+
+/** Ribbon used by MotionStreak (weak reference) */
+@property (readonly) Ribbon *ribbon;
+
 /** creates the streak */
-+(id)streakWithFade:(float)fade minSeg:(float)seg image:(NSString*)path width:(float)width length:(float)length color:(uint)color;
++(id)streakWithFade:(float)fade minSeg:(float)seg image:(NSString*)path width:(float)width length:(float)length color:(ccColor4B)color;
 
 /** init the streak */
--(id)initWithFade:(float)fade minSeg:(float)seg image:(NSString*)path width:(float)width length:(float)length color:(uint)color;
+-(id)initWithFade:(float)fade minSeg:(float)seg image:(NSString*)path width:(float)width length:(float)length color:(ccColor4B)color;
 
 /** polling function */
 -(void)update:(ccTime)delta;
