@@ -8,26 +8,114 @@
 #import "cocos2d.h"
 #import "StreakTest.h"
 
+enum {
+	kTagLabel = 1,
+	kTagSprite1 = 2,
+	kTagSprite2 = 3,
+};
 
+static int sceneIdx=-1;
+static NSString *transitions[] = {
+	@"Test1",
+};
 
-@implementation StreakTest
+#pragma mark Callbacks
+
+Class nextAction()
+{
+	
+	sceneIdx++;
+	sceneIdx = sceneIdx % ( sizeof(transitions) / sizeof(transitions[0]) );
+	NSString *r = transitions[sceneIdx];
+	Class c = NSClassFromString(r);
+	return c;
+}
+
+Class backAction()
+{
+	sceneIdx--;
+	if( sceneIdx < 0 )
+		sceneIdx = sizeof(transitions) / sizeof(transitions[0]) -1;	
+	NSString *r = transitions[sceneIdx];
+	Class c = NSClassFromString(r);
+	return c;
+}
+
+Class restartAction()
+{
+	NSString *r = transitions[sceneIdx];
+	Class c = NSClassFromString(r);
+	return c;
+}
+
+#pragma mark Demo examples start here
+
+@implementation MotionStreakTest
 -(id) init
 {
-	if( (self=[super init])) {
-		CGSize s = [[Director sharedDirector] winSize];
-	  
+	if( (self = [super init]) ) {
+		
+		CGSize s = [[Director sharedDirector] winSize];	
 		Label* label = [Label labelWithString:[self title] fontName:@"Arial" fontSize:32];
-		[self addChild: label];
+		[self addChild:label z:0 tag:kTagLabel];
 		[label setPosition: ccp(s.width/2, s.height-50)];
+		
+		MenuItemImage *item1 = [MenuItemImage itemFromNormalImage:@"b1.png" selectedImage:@"b2.png" target:self selector:@selector(backCallback:)];
+		MenuItemImage *item2 = [MenuItemImage itemFromNormalImage:@"r1.png" selectedImage:@"r2.png" target:self selector:@selector(restartCallback:)];
+		MenuItemImage *item3 = [MenuItemImage itemFromNormalImage:@"f1.png" selectedImage:@"f2.png" target:self selector:@selector(nextCallback:)];
+		
+		Menu *menu = [Menu menuWithItems:item1, item2, item3, nil];
+		menu.position = CGPointZero;
+		item1.position = ccp(480/2-100,30);
+		item2.position = ccp(480/2, 30);
+		item3.position = ccp(480/2+100,30);
+		[self addChild: menu z:1];
+		
 	}
-
 	return self;
 }
 
 -(void) dealloc
 {
-	[root release];
-	[target release];
+	[super dealloc];
+	[[TextureMgr sharedTextureMgr] removeUnusedTextures];
+}
+
+-(void) restartCallback: (id) sender
+{
+	Scene *s = [Scene node];
+	[s addChild: [restartAction() node]];
+	[[Director sharedDirector] replaceScene: s];
+}
+
+-(void) nextCallback: (id) sender
+{
+	Scene *s = [Scene node];
+	[s addChild: [nextAction() node]];
+	[[Director sharedDirector] replaceScene: s];
+}
+
+-(void) backCallback: (id) sender
+{
+	Scene *s = [Scene node];
+	[s addChild: [backAction() node]];
+	[[Director sharedDirector] replaceScene: s];
+}
+
+-(NSString*) title
+{
+	return @"No title";
+}
+@end
+
+
+@implementation Test1
+-(NSString*) title
+{
+	return @"MotionStreak test 1";
+}
+-(void) dealloc
+{
 	[super dealloc];
 }
 
@@ -37,7 +125,7 @@
 	CGSize s = [[Director sharedDirector] winSize];
   
 	// the root object just rotates around
-	root = [[Sprite spriteWithFile:@"r1.png"] retain];
+	root = [Sprite spriteWithFile:@"r1.png"];
 	[self addChild: root z:1];
 	[root setPosition: ccp(s.width/2, s.height/2)];
   
@@ -45,8 +133,9 @@
 	target = [Sprite spriteWithFile:@"r1.png"];
 	[root addChild:target];
 	[target setPosition:ccp(100,0)];
+
 	// create the streak object and add it to the scene
-	streak = [MotionStreak streakWithFade:3 minSeg:3 image:@"streak.png" width:32 length:32 color:0xFFFFFF];
+	streak = [MotionStreak streakWithFade:3 minSeg:3 image:@"streak.png" width:32 length:32 color:ccc4(0,255,0,255)];
 	[self addChild:streak];
 	// schedule an update on each frame so we can syncronize the streak with the target
 	[self schedule:@selector(onUpdate:)];
@@ -66,12 +155,6 @@
 	[streak setPosition:[target convertToWorldSpace:CGPointZero]];
 
 }
-
--(NSString *) title
-{
-	return @"MotionStreak";
-}
-
 @end
 
 
@@ -98,8 +181,8 @@
 	[window makeKeyAndVisible];		
 
 	Scene *scene = [Scene node];
-	[scene addChild: [StreakTest node]];
-
+	[scene addChild: [nextAction() node]];
+	
 	[[Director sharedDirector] runWithScene: scene];
 }
 
